--- a/node/package.json
+++ b/node/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "clean": "node scripts/clean-videos.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,8 @@
     "amqplib": "^0.10.4",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "lowdb": "^7.0.1",
+    "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1"
   }
 }
